--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,13 @@
   "author": "Bryan Veloso <bryan@avalonstar.com>",
   "main": "",
   "dependencies": {
-    "electron-debug": "^0.5.2"
+    "body-parser": "1.15.0",
+    "cookie-parser": "1.4.1",
+    "cookie-session": "2.0.0-alpha.1",
+    "electron-debug": "^0.5.2",
+    "express": "4.13.4"
+  },
+  "devDependencies": {
+    "electron-prebuilt": "^0.36.9"
   }
 }
