--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "start": "node ./app/start.js",
+    "start": "electron ./app",
     "build": "electron-packager . Shiver --prune --asar --platform=darwin --arch=x64 --version=0.27.2"
   },
   "keywords": [
@@ -23,7 +23,7 @@
     "twitch"
   ],
   "devDependencies": {
-    "electron-packager": "^4.1.2",
-    "electron-prebuilt": "^0.27.2"
+    "electron-packager": "^7.0.1",
+    "electron-prebuilt": "^0.37.7"
   }
 }
