--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,23 @@
     "morgan": "1.7.0",
     "nconf": "0.8.4",
     "passport": "0.3.2",
-    "passport-twitch": "1.0.2"
+    "passport-twitch": "1.0.2",
+    "react": "15.0.2",
+    "react-dom": "15.0.2"
+  },
+  "devDependencies": {
+    "babel-core": "6.8.0",
+    "babel-eslint": "6.0.4",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-react-hmre": "1.1.1",
+    "babel-preset-stage-0": "6.5.0",
+    "eslint": "2.9.0",
+    "eslint-plugin-react": "5.0.1",
+    "webpack": "1.13.0",
+    "webpack-dev-middleware": "1.6.1",
+    "webpack-dev-server": "1.14.1",
+    "webpack-hot-middleware": "2.10.0"
   }
 }
