--- a/package.json
+++ b/package.json
@@ -26,17 +26,17 @@
   },
   "devDependencies": {
     "asar": "^0.11.0",
-    "babel-core": "^6.7.6",
+    "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-webpack-loaders": "^0.4.0",
-    "babel-polyfill": "^6.7.4",
+    "babel-polyfill": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.7.2",
+    "babel-register": "^6.8.0",
     "chai": "^3.5.0",
     "chromedriver": "^2.21.2",
     "co-mocha": "^1.1.2",
@@ -78,7 +78,6 @@
     "css-modules-require-hook": "^4.0.0",
     "dotenv": "2.0.0",
     "electron-debug": "^0.7.0",
-    "font-awesome": "^4.6.1",
     "keymirror": "^0.1.1",
     "morgan": "1.7.0",
     "nconf": "0.8.4",
@@ -93,7 +92,8 @@
     "react-router-redux": "^4.0.2",
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
-    "source-map-support": "^0.4.0"
+    "source-map-support": "^0.4.0",
+    "superagent": "~1.7.2"
   },
   "devEngines": {
     "node": "4.x || 5.x || 6.x",
