--- a/package.json
+++ b/package.json
@@ -72,18 +72,11 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
-    "body-parser": "1.15.0",
-    "cookie-parser": "1.4.1",
-    "cookie-session": "2.0.0-alpha.1",
     "css-modules-require-hook": "^4.0.0",
     "dotenv": "2.0.0",
     "electron-debug": "^0.7.0",
     "keymirror": "^0.1.1",
-    "morgan": "1.7.0",
     "nconf": "0.8.4",
-    "nedb": "1.8.0",
-    "passport": "0.3.2",
-    "passport-twitch": "1.0.2",
     "postcss": "^5.0.19",
     "react": "15.0.2",
     "react-dom": "15.0.2",
@@ -93,7 +86,7 @@
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
     "source-map-support": "^0.4.0",
-    "superagent": "~1.7.2"
+    "twitch-sdk": "^0.3.1"
   },
   "devEngines": {
     "node": "4.x || 5.x || 6.x",
